--- a/src/components/MyStack.astro
+++ b/src/components/MyStack.astro
@@ -7,9 +7,9 @@ import Card from "./Card/index.astro";
     Here's a snapshot of the primary tools and technologies I work with:
   </p>
   <ul class="text-sm font-light pl-5 list-disc">
-    <li ><strong>Solidjs</strong></li>
-    <li><strong>JavaScript</strong></li>
-    <li><strong>Node.js</strong></li>
-    <li><strong>React.js</strong></li>
+    <li ><strong>Github</strong></li>
+    <li><strong>VsCode</strong></li>
+    <li><strong>Unity</strong></li>
+    <li><strong>Astro</strong></li>
   </ul>
 </Card>
