--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -5,22 +5,20 @@ import Card from "./Card/index.astro";
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-6" title="About me">
   <div class="flex flex-col gap-2">
     <p class="text-sm font-light">
-      Hi, I'm Gianmarco, a front-end software developer from Italy.
+      Hi, I'm Milan, also known as e-402
       <br />
       My primary tools of choice includes:
       <ul class="list-disc list-inside">
-        <li>JavaScript</li>
-        <li>React</li>
-        <li>Solidjs</li>
+        <li>Github</li>
+        <li>VsCode</li>
+        <li>Unity</li>
         <li>Astro</li>
-        <li>svelte</li>
-        <li>Nodejs</li>
       </ul>
     </p>
     <p class="text-sm font-light">
-      Beyond coding, I'm passionate about design, illustration, animation and 3D modelling and traveling.
-      An unusual hobby of mine is collecting vintage passports, they're
-      interesting pieces of history to me.
+      I like coding, it's great ! 
+      It helps understanding a lot of things 
+      and will be very interesting in the future
     </p>
     <p class="text-sm font-light">
       While I have some preferred tools, I always choose the best one for the
