--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,16 @@ import Now from "../components/Now.astro";
 import Globe from "../components/Globe";
 ---
 
+---
+import fetchApi from '../lib/strapi.ts';
+import type Article from '../interfaces/article';
+
+const articles = await fetchApi<Article[]>({
+  endpoint: 'articles', // the content type to fetch
+  wrappedByKey: 'data', // the key to unwrap the response
+});
+---
+
 <script>
   import { stagger, spring, timeline, type TimelineDefinition } from "motion";
   import { loaderAnimation } from "../lib/constants";
@@ -32,8 +42,8 @@ import Globe from "../components/Globe";
 </script>
 
 <Layout
-  title="Gianmarco Cavallo - Freelance front-end Developer"
-  description="I'm a developer based in Italy, passionate about user experience and specializing in engaging animations and micro-interactions. My primary tools of choice include: JavaScript, React, Solid.js, Astro, Svelte, and Node.js."
+  title="e-402, an intern"
+  description="I'm a human that like potatoes and coding"
 >
   <main
     class="text-white m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[800px]"
@@ -66,7 +76,7 @@ import Globe from "../components/Globe";
           href="https://astro.build/"
           target="_blank"
           class="text-red-500">Astro</a
-        > by Gianmarco.
+        > by e-402.
       </p>
     </Card>
   </main>
