Added tree theme.jpg

--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -7,14 +7,15 @@ import { LINKS } from "../lib/constants";
   <div class="h-full">
     <header class="flex items-center">
       <h1 class="text-white text-xl font-bold">
-        You have ways of contacting me !
+        You should try this simple game !
       </h1>
     </header>
     <div class="flex flex-col mt-4 w-fit">
-      <h2 class="text-gray-500">Socials</h2>
+      <h2 class="text-gray-500">Click to play game</h2>
       <ul>
         <li>
-          <a href={LINKS.github} target="_blank">Github</a>
+          <a href={LINKS.game} target="_blank">Puzzle game</a>
+          <img>tree theme.jpg
         </li>
       </ul>
     </div>
