Fixed tree preview

--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -15,7 +15,7 @@ import { LINKS } from "../lib/constants";
       <ul>
         <li>
           <a href={LINKS.game} target="_blank">Puzzle game</a>
-          <img>tree theme.jpg
+          <img src="/src/components/treeTheme.jpg" width="50" height="50" />
         </li>
       </ul>
     </div>
