--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -5,7 +5,7 @@ import Card from "./Card/index.astro";
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-6" title="About me">
   <div class="flex flex-col gap-2">
     <p class="text-sm font-light">
-      Hi, I'm Milan, also known as e-402
+      Hi, I'm e-402, also known as Milan
       <br />
       My primary tools of choice includes:
       <ul class="list-disc list-inside">
