--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -9,14 +9,13 @@ import treeTheme from '../components/treeTheme.jpg';
   <div class="h-full">
     <header class="flex items-center">
       <h1 class="text-white text-xl font-bold">
-        You should try this simple game !
+        Games available in this website:
       </h1>
     </header>
     <div class="flex flex-col mt-4 w-fit">
-      <h2 class="text-gray-500">Click to play game</h2>
       <ul>
         <li>
-          <a href={LINKS.game} target="_blank">Puzzle game</a>
+          <a href={LINKS.game} target="_blank">Click me to join a magnificient build-in puzzle game !</a>
           <Image src={treeTheme} alt="the backround of the game" />
         </li>
       </ul>
