Changed play button

--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -9,13 +9,13 @@ import treeTheme from '../components/treeTheme.jpg';
   <div class="h-full">
     <header class="flex items-center">
       <h1 class="text-white text-xl font-bold">
-        Games available in this website:
+        Game available in this website:
       </h1>
     </header>
     <div class="flex flex-col mt-4 w-fit">
       <ul>
         <li>
-          <a href={LINKS.game} target="_blank">Click me to join a magnificient build-in puzzle game !</a>
+          <a href={LINKS.game} target="_blank">Click me !</a>
           <Image src={treeTheme} alt="the backround of the game" />
         </li>
       </ul>
