--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -13,7 +13,7 @@ import { Image } from "astro:assets";
       <div class="flex flex-col h-full">
         <h6 class="text-sm font-light m-0 text-gray-500">welcome</h6>
         <p class="m-0 font-light text-xl">
-          Hi, I'm <b class="font-bold">e-402</b>, nothing to say, I like to be myself :D
+          Helly, I am <b class="font-bold">e-402</b>, welcome to my website !
         </p>
       </div>
       <div class="flex gap-4">
