--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -1,5 +1,5 @@
 ---
-import Card from "./Card/index.astro";
+import Card from "./Card-BG/index.astro";
 import Button from "./Button.astro";
 import { LINKS } from "../lib/constants";
 import { Icon } from 'astro-icon/components'
@@ -7,7 +7,7 @@ import Tooltip from "./Tooltip/index";
 import { Image } from "astro:assets";
 ---
 
-<Card colSpan="md:col-span-3" rowSpan="md:row-span-4">
+<Card colSpan="md:col-span-3" rowSpan="md:row-span-4" >
   <div class="flex w-full h-full">
     <div class="flex flex-col justify-between md:max-h-[300px] gap-4">
       <div class="flex flex-col h-full">
