--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -11,9 +11,9 @@ import { Image } from "astro:assets";
   <div class="flex w-full h-full">
     <div class="flex flex-col justify-between md:max-h-[300px] gap-4">
       <div class="flex flex-col h-full">
-        <h6 class="text-sm font-light m-0 text-gray-500">welcome</h6>
-        <p class="m-0 font-light text-xl">
-          Helly, I am <b class="font-bold">e-402</b>, welcome to my website !
+        <h4 class="text-sm font-light m-0 text-gray-500" style="color: rgb(0, 0, 0);">Welcome</h4>
+        <p class="m-0 font-light text-xl" style="color:rgb(0, 0, 0)">
+          Hello, I am <b class="font-bold">e-402</b>, welcome to my website !
         </p>
       </div>
       <div class="flex gap-4">
@@ -31,12 +31,5 @@ import { Image } from "astro:assets";
         </Tooltip>
       </div>
     </div>
-    <Image
-      width="300"
-      height="300"
-      src="/me.webp"
-      class="w-auto max-h-[300px] select-none absolute right-[-110px] bottom-[-20px] z-[-1] opacity-50 md:opacity-100 md:relative md:right-auto md:bottom-auto md:z-auto pointer-events-none"
-      alt="memoji of Milan"
-    />
   </div>
 </Card>
