treeTheme now clickable

--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -9,14 +9,20 @@ import treeTheme from '../components/treeTheme.jpg';
   <div class="h-full">
     <header class="flex items-center">
       <h1 class="text-white text-xl font-bold">
-        Game available in this website:
+        Wanna play a game ?
       </h1>
     </header>
     <div class="flex flex-col mt-4 w-fit">
       <ul>
         <li>
-          <a href={LINKS.game} target="_blank">Click me !</a>
-          <Image src={treeTheme} alt="the backround of the game" />
+          <a href={LINKS.game} target="_blank">Click here
+          <Image
+          src={treeTheme}
+          alt="the background of the game"
+          width=  "200"
+          height="150"
+         />
+         </a>
         </li>
       </ul>
     </div>
