--- a/src/components/Card-BG/index.astro
+++ b/src/components/Card-BG/index.astro
@@ -21,7 +21,7 @@ const { title, body, colSpan, rowSpan, href, colorText, height } = Astro.props;
     height || "h-full"
   } justify-start relative transform perspective-1200 w-full transition duration-75 ease-in-out col-span-1 ${
     colSpan || "md:col-span-2"
-  } ${rowSpan || ""}`} style="background: url(me.webp);   background-size: 600px; background-position: right -450px bottom -100px;
+  } ${rowSpan || ""}`} style="background: url(me.webp);   background-size: 900px; background-position: right -1110px bottom -40px;   width: 675px; height: 375px; left: 10%;
 "
 >
   {
