--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -11,9 +11,9 @@ import { Image } from "astro:assets";
   <div class="flex w-full h-full">
     <div class="flex flex-col justify-between md:max-h-[300px] gap-4">
       <div class="flex flex-col h-full">
-        <h4 class="text-sm font-light m-0 text-gray-500" style="color: rgb(0, 0, 0);">Welcome</h4>
+        <h4 class="text-sm font-light m-0 text-gray-500" style="color: rgb(0, 0, 0);"><b class="font-bold">Welcome</b></h4>
         <p class="m-0 font-light text-xl" style="color:rgb(0, 0, 0)">
-          Hello, I am <b class="font-bold">e-402</b>, welcome to my website !
+          <b class="font-bold">Hello, I am e-402, welcome to my website !</b>
         </p>
       </div>
       <div class="flex gap-4">
