--- a/src/pages/travel.astro
+++ b/src/pages/travel.astro
@@ -18,8 +18,8 @@ import BasicLayout from "../layouts/BasicLayout.astro";
 </script>
 
 <BasicLayout
-  title="Gianmarco Cavallo - Visited Countries"
-  description="A 3d globe showing countries that I have visited so far"
+  title="Milan - Globe"
+  description="A 3d globe showing countries that I want to visit later"
   page="travel"
 
 >
