Changes from https://github.com/SimHubLtd/2024-Internship-Milan/issues/27

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -5,9 +5,9 @@ import Card from "./Card/index.astro";
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-6" title="About me">
   <div class="flex flex-col gap-2">
     <p class="text-sm font-light">
-      Hi, I'm e-402, also known as Milan
-      <br />
-      My primary tools of choice includes:
+      Hi, I'm Milan, also known as e-402
+      <br>
+      My primary tools of choice include:
       <ul class="list-disc list-inside">
         <li>Github</li>
         <li>VsCode</li>
@@ -17,8 +17,8 @@ import Card from "./Card/index.astro";
     </p>
     <p class="text-sm font-light">
       I like coding, it's great ! 
-      It helps understanding a lot of things 
-      and will be very interesting in the future
+      It helps understand a lot of things 
+      and is very interesting !
     </p>
     <p class="text-sm font-light">
       While I have some preferred tools, I always choose the best one for the
