--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -15,7 +15,7 @@ import { Image } from "astro:assets";
         <p class="m-0 font-light text-xl" style="color:rgb(0, 0, 0)">
           <b class="font-bold">Well, hello there !</b>
           <br>
-          <b class="font-bold">Look like you've arrived on Milan's website !</b>
+          <b class="font-bold">Looks like you've arrived on Milan's website !</b>
           <br>
           <b class="font-bold">Nice to meet you !</b>
         </p>
