--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ import Globe from "../components/Globe";
     <Card
       colSpan="md:col-span-1"
       rowSpan="md:row-span-1"
-      title="Countries to go"
+      title="Countries to go to"
       href="travel"
       colorText="text-neutral-900"
     >
