--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -9,10 +9,10 @@ import Card from "./Card/index.astro";
       <br>
       My primary tools of choice include:
       <ul class="list-disc list-inside">
-        <li>Github</li>
-        <li>VsCode</li>
-        <li>Unity</li>
-        <li>Astro</li>
+        <li><a href=https://e-402.github.io/blog/github/ target="_blank">Github</a></li>
+        <li><a href=https://e-402.github.io/blog/vs-code/ target="_blank">VsCode</a></li>
+        <li><a href=https://e-402.github.io/blog/unity/ target="_blank">Unity</a></li>
+        <li><a href=https://e-402.github.io/blog/astro/ target="_blank">Astro</a></li>
       </ul>
     </p>
     <p class="text-sm font-light">
